# slms

./: README.md
.github/workflows/: run-backend-test.yml
backend/: .gitignore  .pre-commit-config.yaml  dev.env  main.py  pyproject.toml  test.env
backend/app/: db.py  main.py  settings.py
backend/app/api/: main.py
backend/app/api/admin/: dependencies.py  exception.py  exceptions.py  routes.py  schema.py  service.py
backend/app/api/auth/: dependencies.py  exceptions.py  routes.py  schema.py  service.py  utils.py
backend/app/api/courses/: dependencies.py  exceptions.py  routes.py  schema.py  services.py
backend/app/api/departments/: dependencies.py  exception.py  exceptions.py  routes.py  schema.py  service.py
backend/app/core/: exceptions.py  log.py
backend/app/models/: base.py  course.py  department.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 58b3afadb06e_initial_create.py  72e973a808bb_initial_create.py  9f74ceaab519_initial_create.py  d302c9224c0e_initial_create.py  e3feb41654c8_initial_create.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_course.py  test_department.py  test_health.py
backend/tests/fixtures/: admin.py  users.py
frontend/slms/: .eslintrc.json  components.json  index.html  package-lock.json  package.json  tsconfig.json
frontend/slms/src/: App.tsx  index.css
frontend/slms/src/features/admin/routes/: index.tsx  (+1 more)
frontend/slms/src/layout/: Banner.tsx  Header.tsx  Root.tsx
frontend/slms/src/lib/: date.ts
frontend/slms/src/pages/: Dashboard.tsx  Home.tsx  Landing.tsx  NotFound.tsx  Signin.tsx  Signup.tsx
frontend/slms/src/routes/: AdminRoute.tsx  index.tsx
frontend/slms/src/shadcnui/ui/: avatar.tsx  button.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  select.tsx  skeleton.tsx  table.tsx  textarea.tsx
frontend/slms/src/store/: apiSlice.ts  bannerSlice.ts  index.ts
frontend/slms/src/types/: store.tsx
(+25 files in other folders)
